@@ -1,3 +1,9 @@
+2002-07-09  Andrea Campi  <a.campi@inet.it>
+
+	* src/libical/icalcomponent.c
+	* src/libical/icalcomponent.h: Added a check for valid component kind
+	before instancing a new one.
+
 2002-07-08  Andrea Campi  <a.campi@inet.it>
 
 	* src/python/Gauge.py
